force-app/main/default/objects/CWS_Economic_Factor__c/CWS_Economic_Factor__c.object-meta.xml
<CustomObject>
    <description>Economic Factor used as a Lookup Object. Economic Factor will be multiplied with Product&apos;s List Price to get the Target Price.</description>
    <label>Economic Factor</label>
    <nameField>
        <displayFormat>EF-{0000}</displayFormat>
        <label>Economic Factor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Economic Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>