force-app/main/default/objects/CWS_Economic_Factor__c/fields/CWS_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category__c</fullName>
    <description>Category</description>
    <inlineHelpText>Category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Category</valueSetName>
    </valueSet>
</CustomField>