force-app/main/default/objects/CWS_Economic_Factor__c/fields/CWS_Economic_Factor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Economic_Factor__c</fullName>
    <description>Economic Factor</description>
    <inlineHelpText>Economic Factor</inlineHelpText>
    <label>Economic Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>