force-app/main/default/objects/CWS_Economic_Factor__c/fields/CWS_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Type__c</fullName>
    <description>Product Type</description>
    <inlineHelpText>Product Type</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>