force-app/main/default/objects/CWS_Economic_Factor__c/fields/CWS_UniqueId__c.field-meta.xml
<CustomField>
    <fullName>CWS_UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field stores the concatenated value of CurrencyIsoCode, Category and Product Type. This is used to block duplicate economic factor records being created. This field is updated using WF rule.</description>
    <inlineHelpText>This field stores the concatenated value of CurrencyIsoCode, Category and Product Type. This is used to block duplicate economic factor records being created. This field is updated using WF rule.</inlineHelpText>
    <label>UniqueId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>