force-app/main/default/objects/CWS_Economic_Factor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CWS_Economic_Factor__c</columns>
    <columns>CWS_Product_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>